# valkai-take-home

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  WRITEUP.md  project-details.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/run-harness/: SKILL.md
.claude/skills/run-harness-exec/: SKILL.md
evals/: README.md  harness.py  harness_setup.py  judge_agent.py
evals/results/: test-1.md  test-2.md  test-3.md  test-4.md  test-5.md
src/agent/: core.py
src/agent/memory/: __init__.py  base.py  buffer.py  checkpoint.py  store.py  summary.py  summary_buffer.py  vector.py
